comment out unused stuffs

--- a/medicalconcierge/index.html
+++ b/medicalconcierge/index.html
@@ -35,30 +35,30 @@
 			<!-- Main Navigation -->
 			<nav class="main_nav">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About us</a></li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="blog.html">News</a></li>
-					<li><a href="contact.html">Contact</a></li>
+<!--					<li class="active"><a href="index.html">Home</a></li>-->
+<!--					<li><a href="about.html">About us</a></li>-->
+<!--					<li><a href="services.html">Services</a></li>-->
+<!--					<li><a href="blog.html">News</a></li>-->
+<!--					<li><a href="contact.html">Contact</a></li>-->
 				</ul>
 			</nav>
 			<div class="header_extra d-flex flex-row align-items-center justify-content-end ml-auto">
 				
 				<!-- Work Hourse -->
-				<div class="work_hours">Coming soon</div>
+<!--				<div class="work_hours">Coming soon</div>-->
 
 				<!-- Header Phone -->
-				<div class="header_phone">Coming soon2</div>
+<!--				<div class="header_phone">Coming soon2</div>-->
 
 				<!-- Appointment Button -->
-				<div class="button button_1 header_button"><a href="#">Make an Appointment</a></div>
+				<div class="button button_1 header_button"><a href="contact.html">Contact us</a></div>
 
 				<!-- Header Social -->
 				<div class="social header_social">
 					<ul class="d-flex flex-row align-items-center justify-content-start">
 						<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 
@@ -128,65 +128,65 @@
 					</div>
 				</div>
 
-				<!-- Slide -->
-				<div class="owl-item">
-					<div class="background_image" style="background-image:url(images/home_slider.jpg)"></div>
-					<div class="home_container">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<div class="home_content">
-										<div class="home_subtitle">#1 Plastic Surgery Clinic</div>
-										<div class="home_title">Love the new you</div>
-										<div class="home_text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
-										</div>
-										<div class="home_buttons d-flex flex-row align-items-center justify-content-start">
-											<div class="button button_1 trans_200"><a href="#">read more</a></div>
-											<div class="button button_2 trans_200"><a href="#">make an appointment</a></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+<!--				&lt;!&ndash; Slide &ndash;&gt;-->
+<!--				<div class="owl-item">-->
+<!--					<div class="background_image" style="background-image:url(images/home_slider.jpg)"></div>-->
+<!--					<div class="home_container">-->
+<!--						<div class="container">-->
+<!--							<div class="row">-->
+<!--								<div class="col">-->
+<!--									<div class="home_content">-->
+<!--										<div class="home_subtitle">#1 Plastic Surgery Clinic</div>-->
+<!--										<div class="home_title">Love the new you</div>-->
+<!--										<div class="home_text">-->
+<!--											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>-->
+<!--										</div>-->
+<!--										<div class="home_buttons d-flex flex-row align-items-center justify-content-start">-->
+<!--											<div class="button button_1 trans_200"><a href="#">read more</a></div>-->
+<!--											<div class="button button_2 trans_200"><a href="#">make an appointment</a></div>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 
-				<!-- Slide -->
-				<div class="owl-item">
-					<div class="background_image" style="background-image:url(images/home_slider.jpg)"></div>
-					<div class="home_container">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<div class="home_content">
-										<div class="home_subtitle">#1 Plastic Surgery Clinic</div>
-										<div class="home_title">Love the new you</div>
-										<div class="home_text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
-										</div>
-										<div class="home_buttons d-flex flex-row align-items-center justify-content-start">
-											<div class="button button_1 trans_200"><a href="#">read more</a></div>
-											<div class="button button_2 trans_200"><a href="#">make an appointment</a></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+<!--				&lt;!&ndash; Slide &ndash;&gt;-->
+<!--				<div class="owl-item">-->
+<!--					<div class="background_image" style="background-image:url(images/home_slider.jpg)"></div>-->
+<!--					<div class="home_container">-->
+<!--						<div class="container">-->
+<!--							<div class="row">-->
+<!--								<div class="col">-->
+<!--									<div class="home_content">-->
+<!--										<div class="home_subtitle">#1 Plastic Surgery Clinic</div>-->
+<!--										<div class="home_title">Love the new you</div>-->
+<!--										<div class="home_text">-->
+<!--											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>-->
+<!--										</div>-->
+<!--										<div class="home_buttons d-flex flex-row align-items-center justify-content-start">-->
+<!--											<div class="button button_1 trans_200"><a href="#">read more</a></div>-->
+<!--											<div class="button button_2 trans_200"><a href="#">make an appointment</a></div>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 
 			</div>
 
 			<!-- Home Slider Dots -->
 
-			<div class="home_slider_dots">
-				<ul id="home_slider_custom_dots" class="home_slider_custom_dots d-flex flex-row align-items-center justify-content-start">
-					<li class="home_slider_custom_dot trans_200 active"></li>
-					<li class="home_slider_custom_dot trans_200"></li>
-					<li class="home_slider_custom_dot trans_200"></li>
-				</ul>
-			</div>
+<!--			<div class="home_slider_dots">-->
+<!--				<ul id="home_slider_custom_dots" class="home_slider_custom_dots d-flex flex-row align-items-center justify-content-start">-->
+<!--					<li class="home_slider_custom_dot trans_200 active"></li>-->
+<!--					<li class="home_slider_custom_dot trans_200"></li>-->
+<!--					<li class="home_slider_custom_dot trans_200"></li>-->
+<!--				</ul>-->
+<!--			</div>-->
 
 		</div>
 	</div>
@@ -375,50 +375,50 @@
 			</div>
 			<div class="row services_row">
 				
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service text-center">
-						<div class="service">
-							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">
-								<div class="icon"><img src="images/icon_4.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
-							</div>
-							<div class="service_title">Breast Augmentation</div>
-							<div class="service_text">
-								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>
-							</div>
-						</div>
-					</div>
-				</div>
+<!--				&lt;!&ndash; Service &ndash;&gt;-->
+<!--				<div class="col-xl-4 col-md-6 service_col">-->
+<!--					<div class="service text-center">-->
+<!--						<div class="service">-->
+<!--							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">-->
+<!--								<div class="icon"><img src="images/icon_4.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>-->
+<!--							</div>-->
+<!--							<div class="service_title">Breast Augmentation</div>-->
+<!--							<div class="service_text">-->
+<!--								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service text-center">
-						<div class="service">
-							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">
-								<div class="icon"><img src="images/icon_5.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
-							</div>
-							<div class="service_title">Breast Augmentation</div>
-							<div class="service_text">
-								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>
-							</div>
-						</div>
-					</div>
-				</div>
+<!--				&lt;!&ndash; Service &ndash;&gt;-->
+<!--				<div class="col-xl-4 col-md-6 service_col">-->
+<!--					<div class="service text-center">-->
+<!--						<div class="service">-->
+<!--							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">-->
+<!--								<div class="icon"><img src="images/icon_5.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>-->
+<!--							</div>-->
+<!--							<div class="service_title">Breast Augmentation</div>-->
+<!--							<div class="service_text">-->
+<!--								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service text-center">
-						<div class="service">
-							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">
-								<div class="icon"><img src="images/icon_6.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
-							</div>
-							<div class="service_title">Breast Augmentation</div>
-							<div class="service_text">
-								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>
-							</div>
-						</div>
-					</div>
-				</div>
+<!--				&lt;!&ndash; Service &ndash;&gt;-->
+<!--				<div class="col-xl-4 col-md-6 service_col">-->
+<!--					<div class="service text-center">-->
+<!--						<div class="service">-->
+<!--							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">-->
+<!--								<div class="icon"><img src="images/icon_6.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>-->
+<!--							</div>-->
+<!--							<div class="service_title">Breast Augmentation</div>-->
+<!--							<div class="service_text">-->
+<!--								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 
 				<!-- Service -->
 				<div class="col-xl-4 col-md-6 service_col">
@@ -429,7 +429,7 @@
 							</div>
 							<div class="service_title">Breast Augmentation</div>
 							<div class="service_text">
-								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>
+								<p>Odio ultrices ut. Etiam ac esdfsrat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>
 							</div>
 						</div>
 					</div>
@@ -471,28 +471,28 @@
 
 	<!-- Extra -->
 
-	<div class="extra">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/extra.jpg" data-speed="0.8"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="extra_container d-flex flex-row align-items-start justify-content-end">
-						<div class="extra_content">
-							<div class="extra_disc d-flex flex-row align-items-end justify-content-start">
-								<div>30<span>%</span></div>
-								<div>Discount</div>
-							</div>
-							<div class="extra_title">Only in August</div>
-							<div class="extra_text">
-								<p>Nulla facilisi. Nulla egestas vel lacus sed interdum. Sed mollis, orci elementum eleifend tempor, nunc libero porttitor tellus.</p>
-							</div>
-							<div class="button button_1 extra_link trans_200"><a href="#">read more</a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<!--	<div class="extra">-->
+<!--		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/extra.jpg" data-speed="0.8"></div>-->
+<!--		<div class="container">-->
+<!--			<div class="row">-->
+<!--				<div class="col">-->
+<!--					<div class="extra_container d-flex flex-row align-items-start justify-content-end">-->
+<!--						<div class="extra_content">-->
+<!--							<div class="extra_disc d-flex flex-row align-items-end justify-content-start">-->
+<!--								<div>30<span>%</span></div>-->
+<!--								<div>Discount</div>-->
+<!--							</div>-->
+<!--							<div class="extra_title">Only in August</div>-->
+<!--							<div class="extra_text">-->
+<!--								<p>Nulla facilisi. Nulla egestas vel lacus sed interdum. Sed mollis, orci elementum eleifend tempor, nunc libero porttitor tellus.</p>-->
+<!--							</div>-->
+<!--							<div class="button button_1 extra_link trans_200"><a href="#">read more</a></div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
 
 	<!-- Newsletter -->
 
