MC: place in text for index page

--- a/medicalconcierge/index.html
+++ b/medicalconcierge/index.html
@@ -115,11 +115,12 @@
 										<div class="home_subtitle">#1 Plastic Surgery Clinic</div>
 										<div class="home_title">Love the new you</div>
 										<div class="home_text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
+											<p>
+												Our goal is to enable people from all over the world to take advantage of the outstanding medical care available in South Africa at highly affordable prices. Through our comprehensive medical tourism services, we strive to make every aspect of your trip to South Africa as comfortable, safe and rewarding as possible.
+											</p>
 										</div>
 										<div class="home_buttons d-flex flex-row align-items-center justify-content-start">
-											<div class="button button_1 trans_200"><a href="#">read more</a></div>
-											<div class="button button_2 trans_200"><a href="#">make an appointment</a></div>
+											<div class="button button_2 trans_200"><a href="contact.html">make an appointment</a></div>
 										</div>
 									</div>
 								</div>
@@ -201,11 +202,13 @@
 				<div class="col-lg-6 intro_col">
 					<div class="intro_content">
 						<div class="section_title_container">
-							<div class="section_subtitle">This is Dr Pro</div>
+							<div class="section_subtitle">We are medical concierge</div>
 							<div class="section_title"><h2>Welcome to our Clinic</h2></div>
 						</div>
 						<div class="intro_text">
-							<p>Integer aliquet congue libero, eu gravida odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna vestibulum in. Nulla facilisi. Nulla egestas vel lacus sed interdum. Sed mollis, orci elementum eleifend tempor, nunc libero porttitor tellus, vel pharetra metus dolor.</p>
+							<p>
+								The best part of using one service provider to cater for all your medical travel needs is that the many different aspects involved, from accommodation to the procedure itself, can all be factored into the same price. For instance, many popular ‘surgeon and safari’ packages include consultation, surgery, one-on-one physical therapy, a spa visit, a safari tour and even a personal assistant over the full course of your treatment recuperation in South Africa.
+							</p>
 						</div>
 						<div class="milestones">
 							<div class="row milestones_row">
@@ -297,7 +300,11 @@
 							<div class="section_title"><h2>Why choose us?</h2></div>
 						</div>
 						<div class="why_text">
-							<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna vestibulum in. Nulla facilisi. Nulla egestas vel lacus sed interdum. Sed mollis, orci elementum eleifend tempor, nunc libero porttitor tellus, vel pharetra metus dolor.</p>
+							<p>
+								At Aesthetic Angels, we are able to offer you all of the above at highly discounted rates. By utilizing our extensive list of business contacts and trusted relationships, built up over years of experience in the hospitality industry.
+								We offer nurses during post-operative care whether for company, general assistance or to just make a cup of tea.
+
+							</p>
 						</div>
 						<div class="why_list">
 							<ul>
@@ -308,7 +315,7 @@
 										<div class="icon"><img src="images/icon_1.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
 									</div>
 									<div class="why_list_content">
-										<div class="why_list_title">Only Top Products</div>
+										<div class="why_list_title">Nursing Care</div>
 										<div class="why_list_text">Etiam ac erat ut enim maximus accumsan vel ac nisl</div>
 									</div>
 								</li>
@@ -319,7 +326,7 @@
 										<div class="icon"><img src="images/icon_2.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
 									</div>
 									<div class="why_list_content">
-										<div class="why_list_title">The best Doctors</div>
+										<div class="why_list_title">A great Service network</div>
 										<div class="why_list_text">Ac erat ut enim maximus accumsan vel ac</div>
 									</div>
 								</li>
@@ -330,7 +337,7 @@
 										<div class="icon"><img src="images/icon_3.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
 									</div>
 									<div class="why_list_content">
-										<div class="why_list_title">Great Feedback</div>
+										<div class="why_list_title">Affordable Pricing</div>
 										<div class="why_list_text">Etiam ac erat ut enim maximus accumsan vel</div>
 									</div>
 								</li>
@@ -368,58 +375,12 @@
 			<div class="row">
 				<div class="col text-center">
 					<div class="section_title_container">
-						<div class="section_subtitle">This is Dr Pro</div>
+						<div class="section_subtitle">what we have to offer</div>
 						<div class="section_title"><h2>Our Services</h2></div>
 					</div>
 				</div>
 			</div>
 			<div class="row services_row">
-				
-<!--				&lt;!&ndash; Service &ndash;&gt;-->
-<!--				<div class="col-xl-4 col-md-6 service_col">-->
-<!--					<div class="service text-center">-->
-<!--						<div class="service">-->
-<!--							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">-->
-<!--								<div class="icon"><img src="images/icon_4.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>-->
-<!--							</div>-->
-<!--							<div class="service_title">Breast Augmentation</div>-->
-<!--							<div class="service_text">-->
-<!--								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-
-<!--				&lt;!&ndash; Service &ndash;&gt;-->
-<!--				<div class="col-xl-4 col-md-6 service_col">-->
-<!--					<div class="service text-center">-->
-<!--						<div class="service">-->
-<!--							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">-->
-<!--								<div class="icon"><img src="images/icon_5.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>-->
-<!--							</div>-->
-<!--							<div class="service_title">Breast Augmentation</div>-->
-<!--							<div class="service_text">-->
-<!--								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-
-<!--				&lt;!&ndash; Service &ndash;&gt;-->
-<!--				<div class="col-xl-4 col-md-6 service_col">-->
-<!--					<div class="service text-center">-->
-<!--						<div class="service">-->
-<!--							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">-->
-<!--								<div class="icon"><img src="images/icon_6.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>-->
-<!--							</div>-->
-<!--							<div class="service_title">Breast Augmentation</div>-->
-<!--							<div class="service_text">-->
-<!--								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-
 				<!-- Service -->
 				<div class="col-xl-4 col-md-6 service_col">
 					<div class="service text-center">
@@ -427,7 +388,7 @@
 							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">
 								<div class="icon"><img src="images/icon_7.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
 							</div>
-							<div class="service_title">Breast Augmentation</div>
+							<div class="service_title">Nursing Care</div>
 							<div class="service_text">
 								<p>Odio ultrices ut. Etiam ac esdfsrat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>
 							</div>
@@ -442,9 +403,11 @@
 							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">
 								<div class="icon"><img src="images/icon_8.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
 							</div>
-							<div class="service_title">Breast Augmentation</div>
+							<div class="service_title">Private Lodging</div>
 							<div class="service_text">
-								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>
+								<p>
+									We have a stunning villa available right on the beach with magnificent views of the ocean if you are looking for more privacy during your time with us.
+								</p>
 							</div>
 						</div>
 					</div>
@@ -457,9 +420,11 @@
 							<div class="icon_container d-flex flex-column align-items-center justify-content-center ml-auto mr-auto">
 								<div class="icon"><img src="images/icon_3.svg" alt="https://www.flaticon.com/authors/prosymbols"></div>
 							</div>
-							<div class="service_title">Breast Augmentation</div>
+							<div class="service_title">Aesthetic Transformations</div>
 							<div class="service_text">
-								<p>Odio ultrices ut. Etiam ac erat ut enim maximus accumsan vel ac nisl. Duis feugiat bibendum orci, non elementum urna.</p>
+								<p>
+									Ready to turn into the you that you have always been inside?
+								</p>
 							</div>
 						</div>
 					</div>
@@ -529,8 +494,8 @@
 						<div class="footer_about">
 							<div class="footer_logo">
 								<a href="#">
-									<div>Dr<span>PRO</span></div>
-									<div>Plastic Surgery</div>
+									<div>Medical<span>Concierge</span></div>
+									<div>Transformation Specialists</div>
 								</a>
 							</div>
 							<div class="footer_about_text">
@@ -545,7 +510,7 @@
 							<div class="footer_title">Contact Info</div>
 							<ul class="contact_list">
 								<li>+53 345 7953 32453</li>
-								<li>yourmail@gmail.com</li>
+								<li>angie.ashwin@gmail.com</li>
 								<li>contact@gmail.com</li>
 							</ul>
 						</div>
@@ -557,12 +522,12 @@
 							<div class="footer_title">Our Locations</div>
 							<ul class="locations_list">
 								<li>
-									<div class="location_title">Miami</div>
-									<div class="location_text">45 Creekside Av  FL 931</div>
+									<div class="location_title">Cape Town</div>
+									<div class="location_text">Beach Road, Hout Bay</div>
 								</li>
 								<li>
-									<div class="location_title">Los Angeles</div>
-									<div class="location_text">1481 Creekside Lane Avila Beach, CA 931</div>
+									<div class="location_title">Jonhannesburg</div>
+									<div class="location_text">Santon Drive, Santon</div>
 								</li>
 							</ul>
 						</div>
@@ -605,19 +570,9 @@
 				<div class="row">
 					<div class="col">
 						<div class="footer_bar_content  d-flex flex-md-row flex-column align-items-md-center justify-content-start">
-							<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							<div class="copyright">
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://jimmyb.co.za" target="_blank">JimmyB</a>
 </div>
-							<nav class="footer_nav ml-md-auto">
-								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About us</a></li>
-									<li><a href="services.html">Services</a></li>
-									<li><a href="blog.html">News</a></li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-							</nav>
 						</div>
 					</div>
 				</div>
