--- a/offsport/index.html
+++ b/offsport/index.html
@@ -69,7 +69,7 @@
 <script>
     var canvas = new fabric.Canvas('c');
 
-    fabric.Image.fromURL('http://127.0.0.1:8080/logo_small.png', function(myImg) {
+    fabric.Image.fromURL('https://offsport.store/logo_small.png', function(myImg) {
         //i create an extra var for to change some image properties
         var img1 = myImg.set({ left: 200, top: 50 });
         img1.scaleToHeight(60);
