fix form and add logo

--- a/CloudIntel/index.html
+++ b/CloudIntel/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -34,17 +34,14 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
-
-      <h1 class="logo me-auto"><a href="index.html">Cloud Intelligence</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <img height="80px" src="assets/img/logo.svg" alt="">
+       <a href="index.html" class="logo me-auto"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#footer">Contact</a></li>
           <li><a class="getstarted scrollto" href="#faq">Get Started</a></li>
         </ul>
@@ -156,7 +153,7 @@
             <div class="content">
               <h3>World class engineering <strong>built for the future</strong></h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Whether you’re in the early days of product-market fit or you’ve just received your next round of funding, we’re here to help you grow.
               </p>
             </div>
 
@@ -166,7 +163,7 @@
                   <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Tailor made solutions <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                     <p>
-                      Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                      Unlock powerful insights and improve decision-making with leading-edge data analytics and AI
                     </p>
                   </div>
                 </li>
@@ -175,8 +172,7 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span> Ready for any cloud <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-                    </p>
+                      We offer you the flexibility to migrate, build, and optimize apps across hybrid and multicloud environments while minimizing vendor lock-in, leveraging best-in-breed solutions, and meeting regulatory requirements.                    </p>
                   </div>
                 </li>
 
@@ -184,7 +180,7 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> Built for scale <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                      Planet-scale infrastructure delivers the highest level of performance and availability in a secure, sustainable way.
                     </p>
                   </div>
                 </li>
@@ -208,13 +204,16 @@
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
             <img src="assets/img/skills.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+          <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100" style="margin-top: 150px;">
             <h3>Looking to build something different?</h3>
             <p class="fst-italic">
-              Our team of engineers and scientists can take any digital product to market. <br> You think it, we build it.
+<!--              Our team of engineers and scientists can take any digital product to market.-->
+<!--              <br>-->
+<!--              <br>-->
+              We design an all-in-one solutions for business that can be delivered across all devices without any hassle.
             </p>
 
-          <div class="skills-content">
+<!--          <div class="skills-content">-->
 
                 <!-- <div class="progress">
                 <span class="skill">Web Applications<i class="val">100%</i></span>
@@ -237,14 +236,14 @@
                 </div>
               </div>-->
 
-              <div class="progress">
-                <span class="skill">Memes<i class="val">69%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
+<!--              <div class="progress">-->
+<!--                <span class="skill">Memes<i class="val">69%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--                </div>-->
+<!--              </div>-->
 
-            </div>
+<!--            </div>-->
 
           </div>
         </div>
@@ -258,39 +257,47 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            Accelerate business recovery and ensure a better future with solutions that enable hybrid and multi-cloud, generate intelligent insights, and keep your workers connected.
+          </p>
         </div>
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Web Applications</a></h4>
+              <p>
+                Smooth, fast and lightweight applications built for desktop and mobile.
+              </p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspici</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Data Analytics</a></h4>
+              <p>
+                Access you data like never before and view insights you never thought possible.
+              </p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Machine Learning</a></h4>
+              <p>
+                Leverage the power of machine learning and artificial intelligence in your workflows.
+              </p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Data Aggregation</a></h4>
+              <p>All your data in one place, secured in the cloud, accessible from anywhere.</p>
             </div>
           </div>
 
@@ -302,12 +309,12 @@
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
-
+t
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Got Data?</h3>
             <p>
-              Book a discovery session with one of our specialist achitects to design a tailor made solution around your data.
+              Book a discovery session with one of our specialist architects to design a tailor made solution around your data.
             </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
@@ -440,7 +447,7 @@
               <i class="bx bx-time icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Upgrade your stack<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  looking to spruce up that old website? PowerBI got you down?
+                  Modernize traditional applications away from virtual machines and into native containers.
                 </p>
               </div>
             </li>
@@ -449,7 +456,7 @@
               <i class="bx bx-vector icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Connect to the cloud<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Connecting on premise data to the cloud.
+                  Migrate applications from on-premises or other clouds with speed and simplicity, plus built-in testing, rightsizing, and rollback.
                 </p>
               </div>
             </li>
@@ -470,7 +477,7 @@
           <div class="col-lg-6">
             <h4>Request a callback</h4>
             <p>Send us your email to set up a chat with one of our specialists.</p>
-            <form action="" method="post">
+            <form action="https://submit-form.com/sMyM5Rjb">
               <input type="email" name="email" placeholder="Corporate Email"><input type="submit" value="Request">
             </form>
           </div>
